--- a/entendendoJQuery.html
+++ b/entendendoJQuery.html
@@ -5,7 +5,7 @@
     <meta charset='UTF-8'>
     <title>Entendendo jQuery</title>
     <link rel='stylesheet' href='css/estilo.css'>
-    <script src="js/jquery.js"></script>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
 </head>
 
 <body class="conteudo exercicio">
@@ -14,6 +14,16 @@
     <div>2</div>
 
     <script>
-        // ...
+        $('div').hide(5000).show(5000).fadeOut(5000)
+        console.log($('div').get())
+        console.log($.isEmptyObject({nome: 'Daniel'}))
+        console.log(jQuery.inArray(3, [1,2,3]))
+
+        $.fn.fundoVerde = function () {
+            this.css('background-color', 'green')
+            return this // para poder encadear funcoes
+        }
+
+        $('body').fundoVerde()//.fadeOut(1000)
     </script>
 </body>
