--- a/selecionandoElementos1.html
+++ b/selecionandoElementos1.html
@@ -5,7 +5,7 @@
     <meta charset='UTF-8'>
     <title>Selecionando Elementos #01</title>
     <link rel='stylesheet' href='css/estilo.css'>
-    <script src='js/jquery.js'></script>
+    <script src='node_modules/jquery/dist/jquery.min.js'></script>
     <style>
         .negrito {
             font-weight: bold;
@@ -49,6 +49,25 @@
     </form>
 
     <script>
-        // ...
+        $('#feira').addClass('destaque').removeClass('destaque')
+        $('li').addClass('destaque')
+        $('[wm-obrigatorio]').removeClass('destaque')
+        $('li.opcional').removeClass('destaque')
+        $('div p span').addClass('destaque')
+        $('li:first').css('border', 'solid 3px yellow') // primeiro elemento li
+        $('li:odd').css('border', 'solid 10px orange') // os elemento li com índice ímpares (1, 3...) começa do zero!
+        $('li:gt(1)').css('border', 'solid 10px white') // os elementos li com índece maiores que 1
+        $('li:not(:last)').css('border', 'none') // os elementos li que não são o último
+        $('li:contains("r")').css('background-color', 'black') // elemnento li que contém a letra "r"
+
+        // PARA FORMULARIOS
+        $('form *').hide()
+        $('form :text').show()
+        $('form :password').show()
+        $('form :checkbox').show()
+        $('form :radio').show()
+        $('form :file').show()
+
+
     </script>
 </body>
