--- a/modificandoHTML3.html
+++ b/modificandoHTML3.html
@@ -5,7 +5,7 @@
     <meta charset='UTF-8'>
     <title>Modificando HTML #03</title>
     <link rel='stylesheet' href='css/estilo.css'>
-    <script src='js/jquery.js'></script>
+    <script src='node_modules/jquery/dist/jquery.min.js'></script>
 </head>
 
 <body class='conteudo exercicio'>
@@ -13,13 +13,54 @@
     <div id='conteudo'></div>
 
     <script>
-        const pessoas = [
-            { nome: 'Ana', nota: 9.1 },
-            { nome: 'Bianca', nota: 8.4 },
-            { nome: 'Carlos', nota: 7.6 },
-            { nome: 'Julia', nota: 9.7 }
-        ]
-        
-        // ...
+        // MINHA SOLUCAO
+        $(document).ready(function () {                    
+            const alunos = [
+                { nome: 'Ana', nota: 9.1 },
+                { nome: 'Bianca', nota: 8.4 },
+                { nome: 'Carlos', nota: 7.6 },
+                { nome: 'Julia', nota: 9.7 }
+            ]
+
+            // const tabela = alunos.reduce((previous, current) => {
+            //     const tdNome = $('<td>').html(current.nome)
+            //     const tdNota = $('<td>').html(current.nota)
+            //     const linha = $('<tr>').append(tdNome, tdNota)
+
+            //     return previous.append(linha)
+            //     }, $('<table>').css('border', 'solid 5px'))
+
+            // $('#conteudo').append(tabela)
+
+            $('#conteudo').append(function (index, html) {
+                return alunos.reduce((previousValue, currentValue) => {
+                    const tdNome = $('<td>').html(currentValue.nome)
+                    const tdNota = $('<td>').html(currentValue.nota)
+                    const linha = $('<tr>').append(tdNome, tdNota)
+
+                    return previousValue.append(linha)
+                }, $('<table>').css('border', 'solid 5px'))
+            })
+        })
+                
+        // SOLUCAO PROFESSOR
+        // $(function () {
+        //     const alunos = [
+        //         { nome: 'Ana', nota: 9.1 },
+        //         { nome: 'Bianca', nota: 8.4 },
+        //         { nome: 'Carlos', nota: 7.6 },
+        //         { nome: 'Julia', nota: 9.7 }
+        //     ]
+        //     const linhas = alunos.map(a => {
+        //         const tdNome = $('<td>').html(a.nome)
+        //         const tdNota = $('<td>').html(a.nota)
+
+        //         return $('<tr>').append(tdNome, tdNota)
+        //     })
+
+        //     const tabela = $('<table>').html(linhas).css('border', 'solid 5px')
+
+        //     $('#conteudo').append(tabela)
+        // })
     </script>
 </body>
