--- a/manipulandoCSS.html
+++ b/manipulandoCSS.html
@@ -5,7 +5,7 @@
     <meta charset='UTF-8'>
     <title>Manipulando CSS</title>
     <link rel='stylesheet' href='css/estilo.css'>
-    <script src='js/jquery.js'></script>
+    <script src='node_modules/jquery/dist/jquery.min.js'></script>
 </head>
 
 <body class='conteudo exercicio'>
@@ -15,6 +15,22 @@
     <div id='div3'>3</div>
     <div id='resultado'></div>
     <script>
-        // ...
+        const fonte = $('#div1').css('font-family')
+        $('#resultado').append(`Fonte é ${fonte}`)
+
+        // $('#div1').css('font-size', '3em')
+        // $('#div1').css({'font-size': '3em', 'color': 'yellow'})
+        // $('#div1').css('font-size', function () {
+        //     return `${ 2 * 2}em`
+        // })
+
+        $('#div2').addClass('destaque')
+
+        const temClasse = $('#div2').hasClass('destaque')
+        $('#resultado').append(`<br>Tem class? ${temClasse}`)
+
+        $('#div2').removeClass('destaque')
+        $('#div2').toggleClass('destaque')
+        $('#div2').toggleClass('destaque')
     </script>
 </body>
