--- a/eventos1.html
+++ b/eventos1.html
@@ -5,7 +5,7 @@
     <meta charset='UTF-8'>
     <title>Eventos #01</title>
     <link rel='stylesheet' href='css/estilo.css'>
-    <script src='js/jquery.js'></script>
+    <script src='node_modules/jquery/dist/jquery.min.js'></script>
     <style>
         input {
             font-size: 2em;
@@ -20,6 +20,36 @@
     <input type="text" placeholder="Cor de Background">
 
     <script>
-        // ...
+        $(function () {
+            function mostrarPosicaoDoMouse(e) {
+                $('#posicao').html(`x: ${e.clientX} y: ${e.clientY}`)
+            }
+
+            $('body').on('mousemove', mostrarPosicaoDoMouse)
+
+            $('#posicao').mouseover(e => {
+                $('body').off('mousemove', mostrarPosicaoDoMouse)
+            })
+
+            $('#posicao').mouseleave(e => {
+                $('body').mousemove(mostrarPosicaoDoMouse)
+            })
+
+            let cliques = 0
+            $('body').click(e => {
+                $('#cliques').html(`Cliques: ${++cliques}`)
+            })
+
+            const backgroundOriginal = $('body').css('background-color')
+
+            $('input').keyup(function (e) {
+                const valor = $(this).val()
+                if (valor.match(/#[\da-fA-F]{3,6}/)) {
+                    $('body').css('background-color', valor)
+                } else {
+                    $('body').css('background-color', backgroundOriginal)
+                }
+            })
+        })
     </script>
 </body>
