--- a/eventos2.html
+++ b/eventos2.html
@@ -5,7 +5,7 @@
     <meta charset='UTF-8'>
     <title>Eventos #02</title>
     <link rel='stylesheet' href='css/estilo.css'>
-    <script src='js/jquery.js'></script>
+    <script src='node_modules/jquery/dist/jquery.min.js'></script>
     <style>
         input {
             font-size: 2em;
@@ -21,6 +21,25 @@
     <input type="text" placeholder="Digite e Selecione">
     <div id="resultado2">?</div>
     <script>
-        // ...
+        $(function() {
+            const alternarDestaque = () => $('#div1').toggleClass('destaque')
+            $('#div1').on('mouseenter mouseleave', alternarDestaque) // pode ter outra callback pra ser chamada quando o mouse sair
+            // $('#div1').hover(alternarDestaque) // pode ter outra callback pra ser chamada quando o mouse sair
+        
+            //$('#div1').one('mouseenter', e => alert('Aviso IMPORTANTE'))
+            $('#div1').dblclick(e => $('#div1').fadeOut(1000).fadeIn(1000))
+
+            $(window).resize(e => {
+                const l = $(window).width()
+                const a = $(window).height()
+                $('#resultado1').html(`Largura: ${l} Altura: ${a}`)
+            })
+
+            $('input').select(e => {
+                const inicio = e.target.selectionStart
+                const fim = e.target.selectionEnd
+                $('#resultado2').html(e.target.value.substring(inicio, fim))
+            })
+        })
     </script>
 </body>
