--- a/eventos3.html
+++ b/eventos3.html
@@ -5,7 +5,7 @@
     <meta charset='UTF-8'>
     <title>Eventos #03</title>
     <link rel='stylesheet' href='css/estilo.css'>
-    <script src='js/jquery.js'></script>
+    <script src='node_modules/jquery/dist/jquery.min.js'></script>
     <style>
         input {
             font-size: 2em;
@@ -26,6 +26,30 @@
     <span id='resultado'></span>
 
     <script>
-        // ...
+        function exibirDadosEvento(e) {
+            $('#resultado').empty()
+            const div = [$('<div>'), $('<div>')]
+
+            $('#resultado').append(div)
+            div[0].append(`target: ${e.target.id}`)
+
+            const rt = e.relatedTarget ? e.relatedTarget.tagName : null
+            div[0].append(`<br>relatedTarget: ${rt}`)
+            div[0].append(`<br>type: ${e.type}`)
+            div[0].append(`<br>which: ${e.which}`)
+            div[0].append(`<br>metaKey: ${e.metaKey}`)
+
+            div[1].append(`pageX: ${e.pageX}`)
+            div[1].append(`<br>pageY: ${e.pageY}`)
+            div[1].append(`<br>clientX: ${e.clientX}`)
+            div[1].append(`<br>clientY: ${e.clientY}`)
+
+            const obs = e.data? e.data.obs : null
+            div[1].append(`<br>obs: ${obs}`)
+        }
+
+        $('#div1, #div2').on('mouseenter mouseleave', {obs: 'Funciona'}, exibirDadosEvento)
+        $('input').keyup(exibirDadosEvento)
+
     </script>
 </body>
