Working with animation 2

--- a/animacao2.html
+++ b/animacao2.html
@@ -5,7 +5,7 @@
     <meta charset='UTF-8'>
     <title>Animação #02</title>
     <link rel='stylesheet' href='css/estilo.css'>
-    <script src='js/jquery.js'></script>
+    <script src='node_modules/jquery/dist/jquery.min.js'></script>
     <style>
         body {
             position: relative;
@@ -28,6 +28,31 @@
     <div>Animar!</div>
 
     <script>
-        // ...
+        function alterarLargura(valor, duracao, callback) {
+            $('div').animate({ width: `+=${valor}` }, duracao, callback)
+        }
+
+        function moverDiagonal(valor, duracao, callback) {
+            $('div').animate({ top: `+=${valor}`, left: `+=${valor}` }, duracao, callback)
+        }
+
+        function girar(valor, duracao, callback) {
+            $('div').animate( { transform: `+=${valor}` }, {
+                step: function (valor) {
+                    $(this).css('transform', `rotate(${valor}deg)`)
+                },
+                duration: duracao,
+                easing: 'swing',
+                complete: callback
+            })
+        }
+
+        alterarLargura(300, 100, () => {
+            alterarLargura(-300, 'slow', () => {
+                moverDiagonal(300, 600, () => {
+                    girar(3300, 3000)
+                })
+            })
+        })
     </script>
 </body>
