Fix function name

--- a/animacao2.html
+++ b/animacao2.html
@@ -34,7 +34,7 @@
                     try{
                         $('div').animate({ width: `+=${valor}` }, duracao)
                     } catch (e) {
-                        rejetc(e)
+                        reject(e)
                     }
                 })
             }
