--- a/plugin1.html
+++ b/plugin1.html
@@ -5,7 +5,7 @@
     <meta charset='UTF-8'>
     <title>Plugin #01</title>
     <link rel='stylesheet' href='css/estilo.css'>
-    <script src='js/jquery.js'></script>
+    <script src='node_modules/jquery/dist/jquery.min.js'></script>
 </head>
 
 <body class='conteudo exercicio'>
@@ -22,6 +22,24 @@
     </div>
 
     <script>
-        // ...
+        // Sintaxe para evitar que a variavel $ seja sobrescrita, protege de outros frameworks
+        (function ($) {
+            $.fn.interpretar = function () {
+                const retirarChaves = s => s.substring(2, s.length - 2)
+                const conteudo = $(this).html()
+                const expressoesComChaves = conteudo.match(/\{\{.+\}\}/g)
+                const expressoes = expressoesComChaves.map(retirarChaves)
+                const resultados = expressoesComChaves.map(e => eval(e))
+
+                let conteudoFinal = conteudo
+                expressoesComChaves.forEach((e, i) => {
+                    conteudoFinal = conteudoFinal.replace(e, resultados[i])
+                })
+
+                $(this).html(conteudoFinal)
+            }
+
+            $('div').interpretar()
+        })(jQuery)
     </script>
 </body>
