return this for chaining

--- a/plugin1.html
+++ b/plugin1.html
@@ -37,6 +37,7 @@
                 })
 
                 $(this).html(conteudoFinal)
+                return this //para poder encadear com outras chamadas
             }
 
             $('div').interpretar()
