--- a/plugin2.html
+++ b/plugin2.html
@@ -5,7 +5,7 @@
     <meta charset='UTF-8'>
     <title>Plugin #02</title>
     <link rel='stylesheet' href='css/temporizador.css'>
-    <script src='js/jquery.js'></script>
+    <script src='node_modules/jquery/dist/jquery.min.js'></script>
 </head>
 
 <body>
@@ -13,6 +13,9 @@
     <div></div>
     <script src="js/temporizador.js"></script>
     <script>
-        // ...
+        $('div').temporizador({
+            mensagem: "Em breve um novo site para você",
+            horario: "11:57:00"
+        }).hide().fadeIn(3000)
     </script>
 </body>
